--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "birthday-cake",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://toanlee5433.github.io/CmsnChiTrang",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@dotlottie/player-component": "^2.7.12",
@@ -28,6 +31,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "gh-pages": "^6.3.0",
     "typescript": "^5.4.2",
     "vite": "^5.1.6"
   }
